--- a/4_menu.html
+++ b/4_menu.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MENU</title>
-    <script type="module" crossorigin src="/Luminous-Brunch/assets/main-e6f5aebd.js"></script>
-    <link rel="stylesheet" href="/Luminous-Brunch/assets/main-bebc6330.css">
+    <script type="module" crossorigin src="/Luminous-Brunch/assets/main-88287025.js"></script>
+    <link rel="stylesheet" href="/Luminous-Brunch/assets/main-39317e94.css">
   </head>
   <body>
     <header class="position-relative bg-light">
@@ -44,32 +44,44 @@
         >
         <ul class="dropdownMenu position_absolute_lg list-unstyled ps-0">
           <li>
-            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-1_menu-salad.html?menu=Salad"
+            <a
+              class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500"
+              href="4-1_menu-salad.html?menu=Salad"
               >沙拉系列</a
             >
           </li>
           <li>
-            <a  class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-1_menu-salad.html?menu=Burger"
+            <a
+              class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500"
+              href="4-1_menu-salad.html?menu=Burger"
               >漢堡系列</a
             >
           </li>
           <li>
-            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-1_menu-salad.html?menu=Sandwich"
+            <a
+              class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500"
+              href="4-1_menu-salad.html?menu=Sandwich"
               >三明治系列</a
             >
           </li>
           <li>
-            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-1_menu-salad.html?menu=Brunch"
+            <a
+              class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500"
+              href="4-1_menu-salad.html?menu=Brunch"
               >早午餐拼盤</a
             >
           </li>
           <li>
-            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-1_menu-salad.html?menu=Pasta"
+            <a
+              class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500"
+              href="4-1_menu-salad.html?menu=Pasta"
               >義大利麵系列</a
             >
           </li>
           <li>
-            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-1_menu-salad.html?menu=Drink"
+            <a
+              class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500"
+              href="4-1_menu-salad.html?menu=Drink"
               >飲品</a
             >
           </li>
@@ -81,7 +93,9 @@
         >
       </li>
       <li class="nav_item">
-        <a class="py-4 py-lg-3 px-5 fw-500 d-block" href="_login.html">會員註冊/登入</a>
+        <a class="py-4 py-lg-3 px-5 fw-500 d-block" href="_login.html"
+          >會員註冊/登入</a
+        >
       </li>
     </ul>
     <a class="hamberMenu d-lg-none" href="#">
@@ -92,7 +106,7 @@
     </a>
   </div>
 </header>
-<div class="navbar_overlay"></div>
+<div class=""></div>
     <div class="py-6">
       <div class="container">
         <h1  class="display-1 text-center text-primary fw-bolder font-Caveat mb-auto">| MENU |</h1>
@@ -101,30 +115,61 @@
     </div>
     <!-- 選單 -->
     <div class="d-none d-lg-block">
-        <div class="container ">
-    <div class="py-6">
-      <ul id="menuList" class=" d-flex justify-content-around">
-        <li>
-          <a id="Salad" href="4-1_menu-salad.html?menu=Salad" class="link-primary fs-5 fw-bold font-NotoSerif">沙拉系列</a>
-        </li>
-        <li>
-          <a id="Burger" href="4-1_menu-salad.html?menu=Burger" class="link-primary fs-5 fw-bold font-NotoSerif">漢堡系列</a>
-        </li>
-        <li>
-          <a id="Sandwich"  href="4-1_menu-salad.html?menu=Sandwich" class="link-primary fs-5 fw-bold font-NotoSerif">三明治系列</a>
-        </li>
-        <li>
-          <a id="Brunch"  href="4-1_menu-salad.html?menu=Brunch" class="link-primary fs-5 fw-bold font-NotoSerif">早午餐系列</a>
-        </li>
-        <li>
-          <a id="Pasta"  href="4-1_menu-salad.html?menu=Pasta" class="link-primary fs-5 fw-bold font-NotoSerif">義大利麵系列</a>
-        </li>
-        <li>
-          <a id="Drink"  href="4-1_menu-salad.html?menu=Drink" class="link-primary fs-5 fw-bold font-NotoSerif">飲品系列</a>
-        </li>
-      </ul>
+      <div class="container">
+  <div class="py-6">
+    <ul id="menuList" class="d-flex justify-content-around">
+      <li>
+        <a
+          id="Salad"
+          href="4-1_menu-salad.html?menu=Salad"
+          class="link-primary fs-5 fw-bold font-NotoSerif"
+          >沙拉系列</a
+        >
+      </li>
+      <li>
+        <a
+          id="Burger"
+          href="4-1_menu-salad.html?menu=Burger"
+          class="link-primary fs-5 fw-bold font-NotoSerif"
+          >漢堡系列</a
+        >
+      </li>
+      <li>
+        <a
+          id="Sandwich"
+          href="4-1_menu-salad.html?menu=Sandwich"
+          class="link-primary fs-5 fw-bold font-NotoSerif"
+          >三明治系列</a
+        >
+      </li>
+      <li>
+        <a
+          id="Brunch"
+          href="4-1_menu-salad.html?menu=Brunch"
+          class="link-primary fs-5 fw-bold font-NotoSerif"
+          >早午餐系列</a
+        >
+      </li>
+      <li>
+        <a
+          id="Pasta"
+          href="4-1_menu-salad.html?menu=Pasta"
+          class="link-primary fs-5 fw-bold font-NotoSerif"
+          >義大利麵系列</a
+        >
+      </li>
+      <li>
+        <a
+          id="Drink"
+          href="4-1_menu-salad.html?menu=Drink"
+          class="link-primary fs-5 fw-bold font-NotoSerif"
+          >飲品系列</a
+        >
+      </li>
+    </ul>
+  </div>
+</div>
     </div>
-  </div>    </div>
     
     
   <!-- 沙拉 -->
@@ -133,7 +178,7 @@
     <div class="container d-none d-lg-block">
       <div class="row justify-content-end align-items-center ">
         <div class="col-lg-5">
-          <a href="4-1_menu-salad.html?menu=Salad?menu=Salad" class="">
+          <a href="4-1_menu-salad.html?menu=Salad" class="">
             <div class="text-center py-6">
               <h2 class="fw-bold font-NotoSerif mb-6">| 沙 拉 系 列 |</h2>
               <p class="fs-5">隨著人們對健康飲食的重視,沙拉系列在現代社會中變得愈發受歡迎。越來越多的餐廳和快餐連鎖店提供多樣化的沙拉選擇</p>
@@ -146,7 +191,7 @@
     <div class="container d-lg-none ">
       <div class="bg-opcity">
         <div class="col-lg-5">
-          <a href="4-1_menu-salad.html?menu=Salad?menu=Salad" class="">
+          <a href="4-1_menu-salad.html?menu=Salad" class="">
           <div class="text-center py-6">
             <h2 class="fs-4 fw-bold font-NotoSerif mb-6">| 沙 拉 系 列 |</h2>
             <p class="fs-6">隨著人們對健康飲食的重視,沙拉系列在現代社會中變得愈發受歡迎。越來越多的餐廳和快餐連鎖店提供多樣化的沙拉選擇</p>
