--- a/_register.html
+++ b/_register.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>register</title>
-  <script type="module" crossorigin src="/Luminous-Brunch/assets/main-e6f5aebd.js"></script>
-  <link rel="stylesheet" href="/Luminous-Brunch/assets/main-bebc6330.css">
-</head>
-<body>
+    <script type="module" crossorigin src="/Luminous-Brunch/assets/main-88287025.js"></script>
+    <link rel="stylesheet" href="/Luminous-Brunch/assets/main-39317e94.css">
+  </head>
+  <body>
     <main>
-        <header class="position-relative bg-light">
+      <header class="position-relative bg-light">
   <div
     class="container-lg d-flex justify-content-between align-items-center py-5"
   >
@@ -44,32 +44,44 @@
         >
         <ul class="dropdownMenu position_absolute_lg list-unstyled ps-0">
           <li>
-            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-1_menu-salad.html?menu=Salad"
+            <a
+              class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500"
+              href="4-1_menu-salad.html?menu=Salad"
               >沙拉系列</a
             >
           </li>
           <li>
-            <a  class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-1_menu-salad.html?menu=Burger"
+            <a
+              class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500"
+              href="4-1_menu-salad.html?menu=Burger"
               >漢堡系列</a
             >
           </li>
           <li>
-            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-1_menu-salad.html?menu=Sandwich"
+            <a
+              class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500"
+              href="4-1_menu-salad.html?menu=Sandwich"
               >三明治系列</a
             >
           </li>
           <li>
-            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-1_menu-salad.html?menu=Brunch"
+            <a
+              class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500"
+              href="4-1_menu-salad.html?menu=Brunch"
               >早午餐拼盤</a
             >
           </li>
           <li>
-            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-1_menu-salad.html?menu=Pasta"
+            <a
+              class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500"
+              href="4-1_menu-salad.html?menu=Pasta"
               >義大利麵系列</a
             >
           </li>
           <li>
-            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-1_menu-salad.html?menu=Drink"
+            <a
+              class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500"
+              href="4-1_menu-salad.html?menu=Drink"
               >飲品</a
             >
           </li>
@@ -81,7 +93,9 @@
         >
       </li>
       <li class="nav_item">
-        <a class="py-4 py-lg-3 px-5 fw-500 d-block" href="_login.html">會員註冊/登入</a>
+        <a class="py-4 py-lg-3 px-5 fw-500 d-block" href="_login.html"
+          >會員註冊/登入</a
+        >
       </li>
     </ul>
     <a class="hamberMenu d-lg-none" href="#">
@@ -92,92 +106,130 @@
     </a>
   </div>
 </header>
-<div class="navbar_overlay"></div>
-        <div class="login-bg">
-            <img src="/Luminous-Brunch/assets/offerService-b0330657.png" alt="#">
-          </div>
-        <div class="container d-flex justify-content-center">
-          <form class="login-body-bg row justify-content-center">
-              <div class="login-body">
-                <h1 class="h3 mb-3 font-weight-normal text-center text-light">新用戶註冊</h1>
-                <div class="mb-2">
-                  <label for="inputEmail" class="sr-only text-light">電子郵件</label>
-                  <input
-                    type="email"
-                    id="inputEmail"
-                    class="form-control w-100"
-                    placeholder="請輸入電子郵件"
-                    required
-                    autofocus
-                  />
-                </div>
-                <div class="mb-2">
-                  <label for="inputPassword" class="sr-only text-light">密碼</label>
-                  <input
-                    type="password"
-                    id="inputPassword"
-                    class="form-control w-100"
-                    placeholder="請輸入密碼"
-                    required
-                  />
-                </div>
-                <div class="mb-2">
-                  <label for="inputPassword" class="sr-only text-light">確認密碼</label>
-                  <input
-                    type="password"
-                    id="checkPassword"
-                    class="form-control w-100"
-                    placeholder="確認輸入密碼"
-                    required
-                  />
-                </div>
-                <div class="mb-2">
-                  <label for="inputPassword" class="sr-only text-light">用戶姓名</label>
-                  <input
-                    type="name"
-                    id="inputName"
-                    class="form-control w-100"
-                    placeholder="請選擇用戶姓名"
-                    required
-                  />
-                </div>
-                <div class="mb-2">
-                  <label for="inputPassword" class="sr-only text-light">電話</label>
-                  <input
-                    type="phone"
-                    id="inputPhone"
-                    class="form-control w-100"
-                    placeholder="請輸入電話"
-                    required
-                  />
-                </div>
-                <div class="d-flex">
-                  <div class="form-check pe-3">
-                      <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-                      <label class="form-check-label text-light" for="flexRadioDefault1">
-                        男
-                      </label>
-                    </div>
-                    <div class="form-check">
-                      <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
-                      <label class="form-check-label text-light" for="flexRadioDefault2">
-                        女
-                      </label>
-                    </div>
-                </div>
-                <div class="text-center mt-4">
-                  <button class="btn btn-lg btn-blue btn-block w-100" type="submit" id="signup">註冊</button>
-                </div>
-                <div class="form-check mt-4">
-                  <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                  <label class="form-check-label text-light" for="flexCheckDefault">
-                     <p>註冊即表示同意"Luminous Brunch"的使用條款及細則以及隱私權政策</p> 
-                  </label>
-                </div>
+<div class=""></div>
+      <div class="login-bg">
+        <img src="/Luminous-Brunch/assets/offerService-b0330657.png" alt="#" />
+      </div>
+      <div class="container d-flex justify-content-center">
+        <form class="login-body-bg row justify-content-center">
+          <div class="login-body">
+            <h1 class="h3 mb-3 font-weight-normal text-center text-light">
+              新用戶註冊
+            </h1>
+            <div class="mb-2">
+              <label for="inputEmail" class="sr-only text-light"
+                >電子郵件</label
+              >
+              <input
+                type="email"
+                id="inputEmail"
+                class="form-control w-100"
+                placeholder="請輸入電子郵件"
+                required
+                autofocus
+              />
+            </div>
+            <div class="mb-2">
+              <label for="inputPassword" class="sr-only text-light">密碼</label>
+              <input
+                type="password"
+                id="inputPassword"
+                class="form-control w-100"
+                placeholder="請輸入密碼"
+                required
+              />
+            </div>
+            <div class="mb-2">
+              <label for="inputPassword" class="sr-only text-light"
+                >確認密碼</label
+              >
+              <input
+                type="password"
+                id="checkPassword"
+                class="form-control w-100"
+                placeholder="確認輸入密碼"
+                required
+              />
+            </div>
+            <div class="mb-2">
+              <label for="inputPassword" class="sr-only text-light"
+                >用戶姓名</label
+              >
+              <input
+                type="name"
+                id="inputName"
+                class="form-control w-100"
+                placeholder="請選擇用戶姓名"
+                required
+              />
+            </div>
+            <div class="mb-2">
+              <label for="inputPassword" class="sr-only text-light">電話</label>
+              <input
+                type="phone"
+                id="inputPhone"
+                class="form-control w-100"
+                placeholder="請輸入電話"
+                required
+              />
+            </div>
+            <div class="d-flex">
+              <div class="form-check pe-3">
+                <input
+                  class="form-check-input"
+                  type="radio"
+                  name="flexRadioDefault"
+                  id="flexRadioDefault1"
+                />
+                <label
+                  class="form-check-label text-light"
+                  for="flexRadioDefault1"
+                >
+                  男
+                </label>
               </div>
-          </form>
-        </div>
-        <footer class="py-4 border-top bg-pink">
+              <div class="form-check">
+                <input
+                  class="form-check-input"
+                  type="radio"
+                  name="flexRadioDefault"
+                  id="flexRadioDefault2"
+                  checked
+                />
+                <label
+                  class="form-check-label text-light"
+                  for="flexRadioDefault2"
+                >
+                  女
+                </label>
+              </div>
+            </div>
+            <div class="text-center mt-4">
+              <button
+                class="btn btn-lg btn-blue btn-block w-100"
+                type="submit"
+                id="signup"
+              >
+                註冊
+              </button>
+            </div>
+            <div class="form-check mt-4">
+              <input
+                class="form-check-input"
+                type="checkbox"
+                value=""
+                id="flexCheckDefault"
+              />
+              <label class="form-check-label text-light" for="flexCheckDefault">
+                <p>
+                  註冊即表示同意"Luminous Brunch"的使用條款及細則以及隱私權政策
+                </p>
+              </label>
+            </div>
+          </div>
+        </form>
+      </div>
+      <footer class="py-4 border-top bg-pink">
   <div class="container">
     <div class="d-flex justify-content-around footer">
       <div class="d-flex align-items-center">
@@ -242,6 +294,8 @@
   </div>
 </footer>
     </main>
+    <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
+
     
-</body>
+  </body>
 </html>
