--- a/3_newsMain.html
+++ b/3_newsMain.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>newsMainPage</title>
-    <script type="module" crossorigin src="/Luminous-Brunch/assets/main-e6f5aebd.js"></script>
-    <link rel="stylesheet" href="/Luminous-Brunch/assets/main-bebc6330.css">
+    <script type="module" crossorigin src="/Luminous-Brunch/assets/main-88287025.js"></script>
+    <link rel="stylesheet" href="/Luminous-Brunch/assets/main-39317e94.css">
   </head>
   <body>
     <main>
@@ -44,32 +44,44 @@
         >
         <ul class="dropdownMenu position_absolute_lg list-unstyled ps-0">
           <li>
-            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-1_menu-salad.html?menu=Salad"
+            <a
+              class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500"
+              href="4-1_menu-salad.html?menu=Salad"
               >沙拉系列</a
             >
           </li>
           <li>
-            <a  class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-1_menu-salad.html?menu=Burger"
+            <a
+              class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500"
+              href="4-1_menu-salad.html?menu=Burger"
               >漢堡系列</a
             >
           </li>
           <li>
-            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-1_menu-salad.html?menu=Sandwich"
+            <a
+              class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500"
+              href="4-1_menu-salad.html?menu=Sandwich"
               >三明治系列</a
             >
           </li>
           <li>
-            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-1_menu-salad.html?menu=Brunch"
+            <a
+              class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500"
+              href="4-1_menu-salad.html?menu=Brunch"
               >早午餐拼盤</a
             >
           </li>
           <li>
-            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-1_menu-salad.html?menu=Pasta"
+            <a
+              class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500"
+              href="4-1_menu-salad.html?menu=Pasta"
               >義大利麵系列</a
             >
           </li>
           <li>
-            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-1_menu-salad.html?menu=Drink"
+            <a
+              class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500"
+              href="4-1_menu-salad.html?menu=Drink"
               >飲品</a
             >
           </li>
@@ -81,7 +93,9 @@
         >
       </li>
       <li class="nav_item">
-        <a class="py-4 py-lg-3 px-5 fw-500 d-block" href="_login.html">會員註冊/登入</a>
+        <a class="py-4 py-lg-3 px-5 fw-500 d-block" href="_login.html"
+          >會員註冊/登入</a
+        >
       </li>
     </ul>
     <a class="hamberMenu d-lg-none" href="#">
@@ -92,7 +106,7 @@
     </a>
   </div>
 </header>
-<div class="navbar_overlay"></div>
+<div class=""></div>
       <div class="bgimage mb-9">
         <div class="filter"></div>
         <h3>最新消息/優惠</h3>
