訂位功能完成

--- a/pages/5-1_booking.html
+++ b/pages/5-1_booking.html
@@ -96,8 +96,8 @@
               </div>
               <div class="d-flex justify-content-evenly mt-5" id="btn-control">
                 <button
-                  type="click"
-                  class="btn btn-primary act-btn"
+                  type="submit"
+                  class="btn btn-primary act-btn form-btn"
                   id="submitBtn"
                 >
                   立即訂位
