--- a/pages/_login.html
+++ b/pages/_login.html
@@ -40,10 +40,10 @@
                     <form class=""><button class="btn btn-lg btn-blue btn-block w-100" id="login">登入</button></form>
                   </div>
                     <div class="mt-3">
-                      <div class="text-center my-3"><a href="_password.html" class="text-decoration-none text-blue">忘記密碼</a></div>
+                      <div class="text-center my-3"><a href="_password.html" class="text-decoration-none text-blue" id="pageChange">忘記密碼</a></div>
                       <div class="d-flex justify-content-center">
                         <p class=" text-light pe-3">尚未成為用戶?</p>
-                        <a href="_register.html" class="text-decoration-none text-blue">立即註冊</a>
+                        <a href="_register.html" class="text-decoration-none text-blue" id="pageChange">立即註冊</a>
                       </div>
                     </div>
                 </div>
