忘記密碼跳轉功能

--- a/pages/4-1_menu-salad.html
+++ b/pages/4-1_menu-salad.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Salad</title>
+    <title>菜單分頁</title>
 </head>
 <body>
 <%- include('./layout/header'); -%>
@@ -22,42 +22,7 @@
         </div>
     </div> 
   </div>
-  <!-- <div class=" py-6">
-    <div class="container">
-        <div class="menu-container row flex-wrap">
-          <div class="col-md-4">
-                <div class="card-menu">
-                    <img src="../assets/images/burger.jpg" alt="" class="card-img">
-                    <div class="menu-title font-NotoSerif d-flex justify-content-between">
-                        <span class="menu-name">花生醬培根牛肉堡</span>
-                        <span class="menu-price">120$</span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card-menu">
-                    <img src="../assets/images/burger.jpg" alt="" class="card-img">
-                    <div class="menu-title font-NotoSerif d-flex justify-content-between">
-                        <span class="menu-name">花生醬培根牛肉堡</span>
-                        <span class="menu-price">120$</span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card-menu">
-                    <img src="../assets/images/burger.jpg" alt="" class="card-img">
-                    <div class="menu-title font-NotoSerif d-flex justify-content-between">
-                        <span class="menu-name">番茄羅勒義大利麵</span>
-                        <span class="menu-price">120$</span>
-                    </div>
-                </div>
-            </div>
-           
-            
-        </div>
-    </div> 
-  </div> -->
-
+  
 
 <%- include('./layout/footer'); -%>
 
