--- a/pages/_password.html
+++ b/pages/_password.html
@@ -20,27 +20,32 @@
                 <div class="mb-2 input-group">
                 <input
                   type="email"
+                  name="passwordNewEmail"
                   id="inputEmail"
-                  class="form-control "
+                  class="form-control"
                   placeholder="Email address"
                   required
                   autofocus
                 />
-                <button class="btn btn-outline-secondary btn-blue" type="button" id="button-addon2"><p class="text-light mb-0">送出驗證</p></button>
-              </div>
+                <button class="btn btn-outline-secondary btn-blue submitValidateEmail" type="button" id="button-addon2"><p class="text-light mb-0">送出驗證</p></button>
+                </div>
+                <!-- 放錯誤訊息的區塊 -->
+                <p class="errorMessage"></p>
               <div class="mb-2">
                 <label for="inputPassword" class="sr-only text-light">驗證碼</label>
                 <input
                   type="password"
                   id="inputPassword"
+                  name="validateCode"
                   class="form-control"
                   placeholder="Password"
                   required
                 />
               </div>
-          
+              <!-- 放錯誤訊息的區塊 -->
+              <p class="errorMessage"></p>
               <div class="text-center mt-4">
-                <button class="btn btn-lg btn-blue btn-block w-100" type="submit" id="login">確認</button>
+                <button class="btn btn-lg btn-blue btn-block w-100 submitValidateCode" type="submit" id="login">確認</button>
               </div>
             </div>
             <div class="mt-3">
@@ -54,6 +59,7 @@
     </div>
     <%- include('./layout/footer'); -%>
   </main>
+  <script src="https://smtpjs.com/v3/smtp.js"></script>
   <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
   <script type="module" src="../main.js"></script>
 </body>
