--- a/3-1_newsContent.html
+++ b/3-1_newsContent.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>newsContent</title>
-    <script type="module" crossorigin src="/Luminous-Brunch/assets/main-88287025.js"></script>
-    <link rel="stylesheet" href="/Luminous-Brunch/assets/main-39317e94.css">
+    <script type="module" crossorigin src="/Luminous-Brunch/assets/main-fd35fea6.js"></script>
+    <link rel="stylesheet" href="/Luminous-Brunch/assets/main-9a2ad696.css">
   </head>
   <body>
     <main>
@@ -92,10 +92,42 @@
           >線上訂位</a
         >
       </li>
-      <li class="nav_item">
+      <li class="memberLogin">
         <a class="py-4 py-lg-3 px-5 fw-500 d-block" href="_login.html"
           >會員註冊/登入</a
         >
+      </li>
+      <li class="memberCenterItem">
+        <a
+          class="selectMemberCenter py-4 px-5 fw-500 position-relative d-block border-bottom-1 d-flex justify-content-between"
+          href="#"
+          >會員中心<span class="material-symbols-outlined align-bottom">
+            arrow_drop_down
+          </span></a
+        >
+        <ul class="dropdownMemberCenter position_absolute_lg list-unstyled ps-0">
+          <li>
+            <a
+              class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500"
+              href="6-1-1-1_modify-member-info.html"
+              >修改會員資料</a
+            >
+          </li>
+          <li>
+            <a
+              class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500"
+              href="6-1-1-2_reservation-info.html"
+              >查看訂單資訊</a
+            >
+          </li>
+          <li>
+            <a
+              class="logOutBtn py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500"
+              href="index.html"
+              >登出</a
+            >
+          </li>
+        </ul>
       </li>
     </ul>
     <a class="hamberMenu d-lg-none" href="#">
@@ -106,7 +138,7 @@
     </a>
   </div>
 </header>
-<div class=""></div>
+<div class="navbar_overlay"></div>
       <div class="container bg-pink font-color-gray-400">
         <div class="row mt-8 mb-8">
           <div class="col-4">
@@ -167,7 +199,7 @@
           <li><a href="#">關於我們</a></li>
           <li><a href="3_newsMain.html">最新消息/優惠</a></li>
           <li><a href="5-1_booking.html">線上訂位</a></li>
-          <li><a href="#">會員註冊/登入</a></li>
+          <li><a href="_login.html">會員註冊/登入</a></li>
         </ul>
       </div>
       <div class="footer-icon d-flex align-items-center">
