--- a/6-1-1-1_modify-member-info.html
+++ b/6-1-1-1_modify-member-info.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <script type="module" crossorigin src="/Luminous-Brunch/assets/main-88287025.js"></script>
-  <link rel="stylesheet" href="/Luminous-Brunch/assets/main-39317e94.css">
+  <script type="module" crossorigin src="/Luminous-Brunch/assets/main-fd35fea6.js"></script>
+  <link rel="stylesheet" href="/Luminous-Brunch/assets/main-9a2ad696.css">
 </head>
 
 <body class="d-lg-flex flex-column vh-100">
@@ -93,10 +93,42 @@
           >線上訂位</a
         >
       </li>
-      <li class="nav_item">
+      <li class="memberLogin">
         <a class="py-4 py-lg-3 px-5 fw-500 d-block" href="_login.html"
           >會員註冊/登入</a
         >
+      </li>
+      <li class="memberCenterItem">
+        <a
+          class="selectMemberCenter py-4 px-5 fw-500 position-relative d-block border-bottom-1 d-flex justify-content-between"
+          href="#"
+          >會員中心<span class="material-symbols-outlined align-bottom">
+            arrow_drop_down
+          </span></a
+        >
+        <ul class="dropdownMemberCenter position_absolute_lg list-unstyled ps-0">
+          <li>
+            <a
+              class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500"
+              href="6-1-1-1_modify-member-info.html"
+              >修改會員資料</a
+            >
+          </li>
+          <li>
+            <a
+              class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500"
+              href="6-1-1-2_reservation-info.html"
+              >查看訂單資訊</a
+            >
+          </li>
+          <li>
+            <a
+              class="logOutBtn py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500"
+              href="index.html"
+              >登出</a
+            >
+          </li>
+        </ul>
       </li>
     </ul>
     <a class="hamberMenu d-lg-none" href="#">
@@ -107,7 +139,7 @@
     </a>
   </div>
 </header>
-<div class=""></div>
+<div class="navbar_overlay"></div>
     <div class="container flex-grow-1 d-flex flex-column justify-content-center">
       <div class="d-flex justify-content-center align-items-center mt-8 mt-lg-0 mb-8">
         <span class="material-symbols-outlined fs-48">
@@ -117,21 +149,11 @@
       </div>
       <div class="row justify-content-center">
         <div class="col-md-5">
-          <form>
-            <label for="username" class="mb-1">姓名</label>
-            <br>
-            <input type="text" id="username" class="w-100 mb-5 bg-transparent py-1 border border-primary">
-            <br>
-            <label for="phoneNumber" class="mb-1">手機號碼</label>
-            <br>
-            <input type="tel" id="phoneNumber" class="w-100 mb-5 bg-transparent py-1 border border-primary">
-            <br>
-            <label for="email" class="mb-1">信箱</label>
-            <br>
-            <input type="email" id="email" class="w-100 mb-8 bg-transparent py-1 border border-primary">
-            <div class="d-flex justify-content-around mb-8">
-              <button class="btn btn-outline-primary px-4 px-md-7">取消</button>
-              <button class="btn btn-primary px-4 px-md-7">儲存</button>
+          <form id="modifyMemberForm">
+            <div class="js-inputList"></div>
+              <!-- JS渲染 -->
+            <div class="js-saveGroup d-flex justify-content-between mb-8">
+              <!-- JS渲染 -->
             </div>
           </form>
         </div>
@@ -149,7 +171,7 @@
           <li><a href="#">關於我們</a></li>
           <li><a href="3_newsMain.html">最新消息/優惠</a></li>
           <li><a href="5-1_booking.html">線上訂位</a></li>
-          <li><a href="#">會員註冊/登入</a></li>
+          <li><a href="_login.html">會員註冊/登入</a></li>
         </ul>
       </div>
       <div class="footer-icon d-flex align-items-center">
@@ -202,7 +224,8 @@
     </div>
   </div>
 </footer>
-      
+    <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
+    
 </body>
 
 </html>
