--- a/pages/password.html
+++ b/pages/password.html
@@ -51,7 +51,7 @@
             <div class="mt-3">
               <div class="d-flex justify-content-center">
                 <p class=" text-light pe-3">尚未成為用戶?</p>
-                <a href="_register.html" id="pageChange" class="text-decoration-none text-blue">立即註冊</a>
+                <a href="register.html" id="pageChange" class="text-decoration-none text-blue">立即註冊</a>
               </div>
             </div>  
         </form>
