--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>about</title>
-    <script type="module" crossorigin src="/Luminous-Brunch/assets/main-fd35fea6.js"></script>
+    <script type="module" crossorigin src="/Luminous-Brunch/assets/main-d50f387a.js"></script>
     <link rel="stylesheet" href="/Luminous-Brunch/assets/main-9a2ad696.css">
   </head>
   <body>
@@ -93,7 +93,7 @@
         >
       </li>
       <li class="memberLogin">
-        <a class="py-4 py-lg-3 px-5 fw-500 d-block" href="_login.html"
+        <a class="py-4 py-lg-3 px-5 fw-500 d-block" href="login.html"
           >會員註冊/登入</a
         >
       </li>
@@ -151,7 +151,7 @@
           <li><a href="#">關於我們</a></li>
           <li><a href="3_newsMain.html">最新消息/優惠</a></li>
           <li><a href="5-1_booking.html">線上訂位</a></li>
-          <li><a href="_login.html">會員註冊/登入</a></li>
+          <li><a href="login.html">會員註冊/登入</a></li>
         </ul>
       </div>
       <div class="footer-icon d-flex align-items-center">
