--- a/login.html
+++ b/login.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-  <script type="module" crossorigin src="/Luminous-Brunch/assets/main-fd35fea6.js"></script>
+    <title>Login</title>
+  <script type="module" crossorigin src="/Luminous-Brunch/assets/main-d50f387a.js"></script>
   <link rel="stylesheet" href="/Luminous-Brunch/assets/main-9a2ad696.css">
 </head>
 <body>
-  <main>
-    <header class="position-relative bg-light">
+    <main>
+        <header class="position-relative bg-light">
   <div
     class="container-lg d-flex justify-content-between align-items-center py-5"
   >
@@ -93,7 +93,7 @@
         >
       </li>
       <li class="memberLogin">
-        <a class="py-4 py-lg-3 px-5 fw-500 d-block" href="_login.html"
+        <a class="py-4 py-lg-3 px-5 fw-500 d-block" href="login.html"
           >會員註冊/登入</a
         >
       </li>
@@ -139,56 +139,50 @@
   </div>
 </header>
 <div class="navbar_overlay"></div>
-    <div>
-        <div class="login-bg">
-          <img src="/Luminous-Brunch/assets/offerService-b0330657.png" alt="#">
-        </div>
-      <div class="container d-flex justify-content-center">
-        <form class="login-body-bg row justify-content-center">
-            <div class="login-body">
-                <h1 class="h3 mb-3 font-weight-normal text-center text-light">忘記密碼</h1>
-               <label for="inputEmail" class="sr-only text-light">電子郵件</label>
-                <div class="mb-2 input-group">
-                <input
-                  type="email"
-                  name="passwordNewEmail"
-                  id="inputEmail"
-                  class="form-control"
-                  placeholder="Email address"
-                  required
-                  autofocus
-                />
-                <button class="btn btn-outline-secondary btn-blue submitValidateEmail" type="button" id="button-addon2"><p class="text-light mb-0">送出驗證</p></button>
-                </div>
-                <!-- 放錯誤訊息的區塊 -->
-                <p class="errorMessage"></p>
-              <div class="mb-2">
-                <label for="inputPassword" class="sr-only text-light">驗證碼</label>
-                <input
-                  type="password"
-                  id="inputPassword"
-                  name="validateCode"
-                  class="form-control"
-                  placeholder="Password"
-                  required
-                />
-              </div>
-              <!-- 放錯誤訊息的區塊 -->
-              <p class="errorMessage"></p>
-              <div class="text-center mt-4">
-                <button class="btn btn-lg btn-blue btn-block w-100 submitValidateCode" type="submit" id="login">確認</button>
-              </div>
+            <div class="login-bg">
+              <img src="/Luminous-Brunch/assets/offerService-b0330657.png" alt="#">
             </div>
-            <div class="mt-3">
-              <div class="d-flex justify-content-center">
-                <p class=" text-light pe-3">尚未成為用戶?</p>
-                <a href="_register.html" id="pageChange" class="text-decoration-none text-blue">立即註冊</a>
-              </div>
-            </div>  
-        </form>
-      </div>
-    </div>
-    <footer class="py-4 border-top bg-pink">
+          <div class="container d-flex justify-content-center mb-5">
+            <form class="login-body-bg row justify-content-center">
+                <div class="login-body">
+                  <h1 class="h3 mb-3 font-weight-normal text-center text-light">登入</h1>
+                  <div class="mb-2">
+                    <label for="inputEmail" class="sr-only text-light">Email address</label>
+                    <input
+                      type="email"
+                      id="inputEmail"
+                      class="form-control w-100"
+                      placeholder="Email address"
+                      required
+                      autofocus
+                    />
+                  </div>
+                  <div class="mb-2">
+                    <label for="inputPassword" class="sr-only text-light">Password</label>
+                    <input
+                      type="password"
+                      id="inputPassword"
+                      class="form-control w-100"
+                      placeholder="Password"
+                      required
+                    />
+                  </div>
+                  <div class="text-center mt-4">
+                    <form class=""><button class="btn btn-lg btn-blue btn-block w-100" id="login">登入</button></form>
+                  </div>
+                    <div class="mt-3">
+                      <div class="text-center my-3"><a href="password.html" class="text-decoration-none text-blue" id="pageChange">忘記密碼</a></div>
+                      <div class="d-flex justify-content-center">
+                        <p class=" text-light pe-3">尚未成為用戶?</p>
+                        <a href="register.html" class="text-decoration-none text-blue" id="pageChange">立即註冊</a>
+                      </div>
+                    </div>
+                </div>
+                  
+              </form>
+          </div>
+        </div>
+        <footer class="py-4 border-top bg-pink">
   <div class="container">
     <div class="d-flex justify-content-around footer">
       <div class="d-flex align-items-center">
@@ -199,7 +193,7 @@
           <li><a href="#">關於我們</a></li>
           <li><a href="3_newsMain.html">最新消息/優惠</a></li>
           <li><a href="5-1_booking.html">線上訂位</a></li>
-          <li><a href="_login.html">會員註冊/登入</a></li>
+          <li><a href="login.html">會員註冊/登入</a></li>
         </ul>
       </div>
       <div class="footer-icon d-flex align-items-center">
@@ -252,9 +246,8 @@
     </div>
   </div>
 </footer>
-  </main>
-  <script src="https://smtpjs.com/v3/smtp.js"></script>
-  <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
-  
+    </main>   
+    <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
+    
 </body>
 </html>
